# pln

./: .gitignore  NEGOCIADOR_README.md  OPTIMIZACIONES_OLLAMA.md  OPTIMIZACION_HARDWARE.md  README.md  RESUMEN_IMPLEMENTACION.md  estado_butler.json  install_bot.sh  main.py  pyproject.toml  requirements.txt
app/: alta.py  api.txt  api_client.py  bot_negociador.py  carta.py  config.py  eliminar.py  eliminar_mail.py  estrategias_oro.py  gente.py  info.py  main.py  negociador.py  ollama_client.py  orquestador_bots.py  outputmalo.txt  paquete.py  principal.py  prompts_avanzados.py  test_instalacion.py  test_runner.py
app/pln_bot/agente/: negociador.py  ronda.py
app/pln_bot/core/: config.py
app/pln_bot/interfaz/: orquestador_bots.py  principal.py
app/pln_bot/negociacion/: constructor_propuestas.py  enviador_propuestas.py  gestor_acuerdos.py  politica_negociacion.py  procesador_buzon.py  utilidades_mensajes.py
app/pln_bot/nucleo/: configuracion.py
app/pln_bot/services/: analysis.py  api_client.py  ollama_client.py
app/pln_bot/servicios/: cliente_api.py  cliente_ollama.py  servicio_analisis.py
app/state/: Bot_1.json  Bot_2.json
p1/: .env.example  README.md  main.py  pyproject.toml
p1/app/pln_bot/core/: config.py
p2/: pyproject.toml
p3/: README.md  fdi-pln-2602-p3.py  main.py  pyproject.toml
p4/: .env.example  README.md  __init__.py  backend.py  conf.py  main.py  parseo.py  preprocesamiento.py  prueba.py  pyproject.toml  quijote_ir.py  search_engine.py  settings.toml
p4/app/: __init__.py  chunking.py  classical_search.py  cli.py  config.py  errors.py  ingestion.py  logging_utils.py  main.py  models.py  preprocessing.py  rag.py  semantic_search.py  services.py  storage.py  utils.py
p4/app/rag/: __init__.py  context_builder.py  formatter.py  generator.py  prompts.py  retriever.py
p4/app/tui/: __init__.py  app.py
p5/: README.md  analyze_hyperparams.ipynb  pyproject.toml
p5/app/: __init__.py
p5/app/attention/: __init__.py  attention.py  multi_head.py
p5/app/inference/: __init__.py  inference.py
p5/app/model/: model.py
p5/app/tokenizer/: __init__.py  tokenizer.py
p5/app/train/: __init__.py  evaluate.py  hiperparam_train.py  train.py  utils.py
p5/artifacts/best/: best_model.pt  last_model.pt  model.pt  results.txt  tokenizer.json  train_config.txt
p5/p5/: __init__.py
p5/p5/app/: tokenizer.py
