[project]
name = "fdi_pln_2602_p1"
version = "1.0"
description = "Agente negociador autónomo basado en PLN para la práctica 1"
readme = "p1/README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "loguru>=0.7.3",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.57.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "typer>=0.21.1",
]

[project.scripts]
fdi-pln-2602-p1 = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["p1/app"]
